Agregamos el git repo

--- a/pillar.example
+++ b/pillar.example
@@ -34,6 +34,9 @@ sentry_dns_workspace: ''
 sentry_dns_api: ''
 
 application:
+  git:
+    branch: 'master'
+    datal_repo: git@github.com:datal-org/datal.git
   install_dir: /home/datal/
   path: app
   cdn: 'datastore.dev:8888/resources/datal_cdn/'
