--- a/pillar.example
+++ b/pillar.example
@@ -36,7 +36,7 @@ sentry_dns_api: ''
 application:
   git:
     branch: 'master'
-    datal_repo: git@github.com:datal-org/datal.git
+    datal_repo: https://github.com/datal-org/datal.git
   install_dir: /home/datal/
   path: app
   cdn: 'datastore.dev:8888/resources/datal_cdn/'
