adaptación del motor

--- a/apps/v8/microsites_config.properties
+++ b/apps/v8/microsites_config.properties
@@ -25,9 +25,12 @@ redisRW.hostname={{ pillar["redis"]["write_host"] }}
 redisDataServiceOutput.database=0
 redisEndPointState.database=6
 redisDataSourceData.database=7
+redis.maxbytes=200000
 
 # s3 properties
 datasets.bucketname={{ pillar["datastore"]["bucket"] }}
+dataviews.bucketname={{ pillar["datastore"]["bucket"] }}
+datasources.bucketname={{ pillar["datastore"]["temporary_bucket"] }} 
 temporary.bucketname={{ pillar["datastore"]["temporary_bucket"] }}
 # Time to live for generated URLs in minutes
 datasets.urlTTL=10
